# ml-metadata-playground

./: Makefile  README.md  docker-compose.yaml  dockerfile  pyproject.toml
ml_metadata_playground/: metadata.py
tests/: test_ml_metadata_playground.py
