[tool.poetry]
name = "ml-metadata-playground"
version = "0.1.0"
description = ""
authors = ["Jennifer Cwagenberg <CandiedCode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
